src/css/custom.css
/**
 * Any CSS included here will be global. The classic template
 * bundles Infima by default. Infima is a CSS framework designed to
 * work well for content-centric websites.
 */

/* You can override the default Infima variables here. */
:root,
.nlds-theme {
  /* Override pixel values from Figma */
  --utrecht-heading-1-line-height: 1.1;
  --utrecht-heading-2-line-height: 1.3;
  --utrecht-heading-3-line-height: 1.3;
  --utrecht-heading-4-line-height: 1.4;

  --nlds-navbar-link-active-border-color: #148839;

  -webkit-font-smoothing: auto !important;
  -moz-osx-font-smoothing: auto !important;
  --ifm-container-width: 1030px;
  --ifm-container-width-xl: 1080px;
}

.marketing-page {
  --ifm-container-width: 784px;
  --ifm-container-width-xl: var(--ifm-container-width);
}

.utrecht-unordered-list {
  list-style-type: square;
}

.utrecht-unordered-list .utrecht-unordered-list__item::marker {
  content: "◼";
  font-size: 16px;
}

.button {
  box-shadow: 4px 4px 0 rgb(0 0 0 / 10%);
  padding-block-start: var(--utrecht-button-padding-block-start);
  padding-block-end: var(--utrecht-button-padding-block-end);
  padding-inline-end: calc(8px + var(--utrecht-button-icon-size) + var(--utrecht-button-padding-inline-end));
  padding-inline-start: var(--utrecht-button-padding-inline-start);
  font-size: var(--utrecht-button-font-size);
  line-height: var(--utrecht-button-line-height);
  position: relative;
  border: none;
}

.button.button--primary {
  --ifm-button-background-color: #148839;
  --ifm-button-color: #fff;
  border-color: #148839;
}

.button--primary::after {
  content: " ";
  position: absolute;
  display: block;
  right: 0;
  top: 0;
  bottom: 0;
  width: var(--gc-button-icon-size);
  background-color: #0b732c;
  background-image: url("../icons/arrow-right-white.svg");
  background-size: 10px 16px;
  background-repeat: no-repeat;
  transition: background-color 0.2s;
  background-position: center;
}

.button.button--primary:hover {
  background-color: #0b732c;
}

.button--primary:hover::after {
  background-color: #055c21;
}

.button.button--secondary {
  color: #004152;
}

.button--secondary::after {
  content: " ";
  position: absolute;
  display: block;
  right: 0;
  top: 0;
  bottom: 0;
  width: 32px;
  background-color: #d1dfe3;
  background-image: url("../icons/arrow-right-blue.svg");
  background-size: 10px 16px;
  background-repeat: no-repeat;
  transition: background-color 0.2s;
  background-position: center;
}

.button.button--secondary:hover {
  background-color: #004152;
  color: white;
  border-color: #004152;
}

.button--secondary:hover::after {
  background-color: #00303d;
  background-image: url("../icons/arrow-right-white.svg");
}

.footer {
  width: 100%;
}

.footer--dark {
  --ifm-footer-background-color: #00303d;
  --ifm-footer-color: white;
  --ifm-footer-link-hover-color: white;
}

.footer__items {
  list-style: none;
  margin-bottom: 0;
  padding-left: 0;
  display: grid;
  grid-auto-flow: column;
  justify-content: flex-start;
  gap: 36px;
}

.footer__links {
  justify-content: space-between;
}

.footer__links .col {
  flex: none;
  width: fit-content;
}

.footer__link-item svg {
  display: none;
}

.footer__items {
  list-style: none;
  margin-bottom: 0;
  padding-left: 0;
  display: grid;
  grid-auto-flow: column;
  justify-content: flex-start;
  gap: 36px;
}

.footer__links {
  justify-content: space-between;
}

.footer__links .col {
  flex: none;
  width: fit-content;
}

.footer__link-item svg {
  display: none;
}

.docusaurus-highlight-code-line {
  background-color: rgba(0, 0, 0, 0.1);
  display: block;
  margin: 0 calc(-1 * var(--ifm-pre-padding));
  padding: 0 var(--ifm-pre-padding);
}

html[data-theme="dark"] .docusaurus-highlight-code-line {
  background-color: rgba(0, 0, 0, 0.3);
}

/* Overwrite docusaurus styling but use the classname to enable lookup for content position by docusaurus */
.navbar {
  display: unset;
  height: auto;
  padding: 0;
  --ifm-link-hover-decoration: none;
}

.navbar__link {
  --utrecht-link-text-decoration: none;
  --utrecht-link-color: currentColor;
  --utrecht-link-focus-color: #00303d;
  font-size: 18px;
  position: relative;
  text-decoration: none;
}

/* FIXME: when the navbar is custom this should be simpler. Currently the home link is always active */
.navbar__link--active:not(.navbar__brand, .utrecht-button-link),
.navbar__link:not(.utrecht-button-link):hover {
  border-bottom-style: solid;
  border-bottom-width: 4px;
  border-bottom-color: transparent;
  border-bottom-color: var(--nlds-navbar-link-active-border-color);
}

.navbar--dark {
  --ifm-navbar-background-color: var(--nlds-page-header-background-color);
  --ifm-navbar-link-hover-color: white;
  --ifm-menu-color-active: white;
}

.navbar__inner {
  min-height: 64px;
  align-items: center;
  flex-wrap: nowrap;
}
.table-of-contents {
  font-size: 18px;
}

.nlds-theme {
  min-height: 100vh;
  display: grid;
  align-content: inherit;
  font-weight: 400;
}

.mega-footer-link,
.homepage-hero__description_src-components-HomepageHero-module a {
  /* Add white foreground color and underline to links in hero and footer */
  color: white;
  text-decoration: underline;
}

.homepage-hero_src-components-HomepageHero-module {
  --ifm-h1-font-size: var(--utrecht-heading-3-font-size);
}

code,
pre {
  font-family: "Fira Code VF" !important;
  font-size: 16px;
  vertical-align: 1%;
  font-feature-settings: "cv13", "cv20", "ss01", "ss02", "ss03";
}
code {
  border-inline-start: 0;
  border-inline-end: 0;
  background-color: transparent !important;
  border-width: 0;
  padding: 0;
}

article {
  max-inline-size: var(--utrecht-article-max-inline-size);
}

p a,
li a {
  text-decoration: underline; /* Add underline to links in running paragraph text and lists */
  text-underline-offset: 0.2em;
}

[class^="homepage-hero__description"] p a {
  /* Dirty hack to target link in hero banner text */
  color: white;
  text-decoration: underline;
}

.theme-edit-this-page {
  /* Temporarily disable Edit this page link since not every page can be editted by the community */
  display: none;
}

.pagination-nav {
  display: none; /* Temporarily disabled pagination */
}

.utrecht-ordered-list {
  width: auto !important;
}

.voorbeeld-theme {
  --utrecht-button-group-margin-block-start: 20px;
}

.navbar__items {
  gap: 15px;
}

.navbar__items--right {
  gap: 0;
}

.navbar__item:not(.utrecht-button-link, .utrecht-button) {
  height: 100%;
  padding-block-start: 27px;
  padding-inline: 0;
}

.navbar {
  --utrecht-button-subtle-color: white;
  --utrecht-link-color: white;
  --utrecht-item-subtle-hover-color: white;
  --utrecht-button-subtle-hover-background-color: #004152;
  --utrecht-link-hover-color: white;
  --utrecht-link-hover-background-color: #004152;
  --utrecht-button-subtle-active-color: white;
  --utrecht-button-subtle-active-background-color: #224a62;
  --utrecht-link-active-color: white;
  --utrecht-link-active-background-color: #224a62;
}

.navbar-sidebar__item {
  padding-block: 16px;
  padding-inline: 0;
}

.menu__list .menu__list {
  padding-inline: 0;
}

.menu__link {
  --utrecht-link-text-decoration: none;
  text-decoration: none;
  color: var(--nlds-interaction-color);
  border-inline-start: 4px solid transparent;
  border-radius: 0;
}

.menu__link--active,
.menu__link:active {
  background-color: hsla(0, 0%, 0%, 0.05);
  border-color: var(--nlds-navbar-link-active-border-color);
}

.menu__link:hover {
  border-color: var(--nlds-navbar-link-active-border-color);
}

.sidebar__main-category > .menu__list-item-collapsible {
  display: none;
}

.navbar-sidebar__item .menu__link {
  --utrecht-link-color: white;
}

.navbar-sidebar__item .menu__link--active,
.navbar-sidebar__item .menu__link:active {
  --utrecht-link-color: white;
  background-color: var(--nlds-menu-item-selected-background-color);
}

.navbar-sidebar .navbar__item--github-link {
  margin-block-start: 48px;
}

.navbar-sidebar .sidebar__main-category > .menu__list-item-collapsible {
  display: block;
  font-size: 28px;
  margin-block-end: 48px;
}

.menu__list-item-collapsible > .menu__link--active:not([aria-expanded="false"]) {
  border-color: transparent;
}

.theme-doc-sidebar-item-link-level-3,
.theme-doc-sidebar-item-category-level-3 {
  font-weight: normal;
  padding-inline-start: 6px;
}

.theme-doc-sidebar-item-link-level-4 {
  padding-inline-start: 12px;
}

.doc-card-list {
  margin-block-end: 2em !important;
}

@media (min-width: 997px) {
  .navbar__items--left {
    max-width: 950px;
  }

  .navbar__inner {
    padding-inline: var(--ifm-navbar-padding-horizontal);
    align-items: center;
    min-height: 80px;
    gap: 20px;
  }

  .navbar__items {
    align-self: stretch;
  }

  .navbar .navbar__toggle {
    display: none;
  }
}

@media screen and (max-width: 996px) {
  .navbar .navbar__item:not(.navbar__item--show-on-mobile) {
    display: none;
  }

  .navbar .navbar__items:not(.navbar__items--show-on-mobile) {
    display: none;
  }

  .footer__items {
    gap: 16px;
  }

  .footer__col {
    margin-bottom: 0;
  }
}

@media screen and (max-width: 550px) {
  .footer__items {
    grid-auto-flow: row;
  }
}

a {
  transition: none;
}

body:not(.navigation-with-keyboard) *:not(input):focus {
  outline-color: var(--utrecht-focus-outline-color, revert);
  outline-offset: var(--utrecht-focus-outline-offset, revert);
  outline-style: var(--utrecht-focus-outline-style, revert);
  outline-width: var(--utrecht-focus-outline-width, revert);
}

.container--wide {
  padding-inline: 24px;
}

